# datadrift_base_framework

./: .gitignore  .gitmodules  README.md  cleaning.sh  push_to_git.sh  query_run.sh  run_git_push.sh  run_git_rm_example.sh  run_query.sh
dd/:  README.md  pyproject.toml
dd/dd/builtin_plugins/: builtin_impls.py
dd/dd/cli/: commands.py  main.py
dd/dd/core/: pipeline.py  plugins.py  todo.py
dd/dd/plugins/: hookspecs.py
dd/plugins/dd-plugin-ks/: pyproject.toml
dd/plugins/dd-plugin-ks/dd_plugin_ks/: ks_impl.py
dev_candidates/base_scaffolding/: create_dd_project.py  run.sh
dev_candidates/containers/dvc/: run_pipeline.sh
dev_candidates/dd_candidate01/: LICENSE
dev_candidates/dd_candidate02/: 01_install_local.sh  __pyproject.toml  clear_project.sh  install.sh
dev_candidates/dd_server/alarm-notification-service/: Dockerfile
dev_candidates/dd_server/diagnosis-prediction-api/: Dockerfile  app.py
dev_candidates/dd_server/prescription-recommendation-api/: Dockerfile
dev_candidates/neuralscope/: docker-compose.yml  down.sh  up_backgroud.sh
dev_candidates/neuralscope/frontend/: app.py
docs/: Makefile  README.md  build.sh  d3_confusion_matrix.md  dvc_vs_git-lfs.md  dvc_vs_others.md  git-lfs_vs_DVC.md  https_setting.md  install.sh  laravel_project.md  math.ipynb  requirements.txt  vite_web_server.md
docs/source/: conf.py  index.rst  setup.rst
docs/super_pixel/: extract_superpixels.ipynb
docs/tasks_vision/: vision_model_taxonomy.md  vision_models.md
docs_md/: d3_confusion_matrix.md  docker-compose_and_microservice_architecutre.md  https_setting.md  vite_web_server.md
drift_studio/: docker-compose.yml  nginx.conf
drift_studio/backend/: Dockerfile  requirements.txt
drift_studio/ddoc/: 11_install_pytest.sh  12_pytest.sh  README.md  pyproject.toml
drift_studio/ddoc/ddoc/cli/commands/: __init__.py  add.py  examples.py  export.py  fetch.py  ingest.py  plugin.py  report.py  serve.py  snapshot.py
drift_studio/ddoc/ddoc/cli/commands/analyze/: drift.py  eda.py
drift_studio/ddoc/ddoc/core/: cache_service.py  file_service.py  git_service.py  ingest_service.py  schemas.py  staging_service.py  workspace.py
drift_studio/ddoc/ddoc/plugins/: hookspecs.py
drift_studio/ddoc/ddoc/server/: __init__.py  app.py  auth.py  runner.py  schemas.py
drift_studio/ddoc/ddoc/server/routers/: analyze.py  commands.py  examples.py  export.py  fetch.py  health.py  plugins.py  report.py
drift_studio/ddoc/ddoc/templates/: drift_report.html  eda_report.html
drift_studio/ddoc/docs/advanced/: troubleshooting.md  workflows.md
drift_studio/ddoc/docs/guides/: experiments.md  snapshots.md  workspace.md
drift_studio/ddoc/docs/reference/: commands.md
drift_studio/ddoc/docs/releases/: v2.0.0.md  v2.0.2.md
drift_studio/ddoc/docs/tutorial/: concepts.md  quick-start.md  serve.md  toy-data.md
drift_studio/ddoc/plugins/ddoc-plugin-audio/: README.md
drift_studio/ddoc/plugins/ddoc-plugin-audio/ddoc_plugin_audio/: audio_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-text/: README.md  pyproject.toml
drift_studio/ddoc/plugins/ddoc-plugin-text/ddoc_plugin_text/: text_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-timeseries/: README.md
drift_studio/ddoc/plugins/ddoc-plugin-timeseries/ddoc_plugin_timeseries/: timeseries_impl.py
drift_studio/ddoc/plugins/ddoc-plugin-vision/: README.md
drift_studio/ddoc/plugins/ddoc-plugin-vision/ddoc_plugin_vision/: vision_impl.py
drift_studio/ddoc/scripts/: 01_plugin_test.sh  02_plugin_test_nlp.sh  03_ddoc_test_cmd.sh  run_drift_experiment.sh
drift_studio/ddoc/tests/: conftest.py  test_ingest.py  test_plugin_drift_e2e.py  test_server.py
drift_studio/ddoc/tests/fixtures/: envelope_v1_1.json  factories.py
drift_studio/ddoc/usecase_pq/: ddocv2_full_experiment.sh  ddocv2_setup_environment.sh  ddocv2_test_dataprocess.sh  ddocv2_test_modelprocess.sh
notebooks/: demo1.ipynb  demo2.ipynb  demo3.ipynb  notebook_datachain.ipynb  test01_embedding_explorer.ipynb  test_datachain.py  test_wds_e2e.py
notebooks/embedding_and_comparison/: demo.ipynb
notebooks/hopfield_net/: HopfieldNet.ipynb  ModelEnergy.ipynb  README.md
notebooks/loss_landscape/: 01_losslandscape_linear_regression.ipynb  02_losslandscape_and_hopfield_network.ipynb
notebooks/paraview/: convert_csv_to_vtp.py  generate_dinov2_embeddings_to_csv.py  paraview_embedding.py  paraview_hello_world.py  run01_paraview_hello_world.sh  run02_paraview_embedding.sh  run03_embedding_vis.sh  visualize_embeddings_paraview.py
notebooks/report/: make_report.py  report.md  run.sh
notebooks/xai_for_datadrift/: README.md  drift_detection_module.py  main.py  xai_and_datadrift_01.ipynb
sandbox/flow_app/: app.py  requirements.txt
sandbox/pluggy_demo01/: data.csv  hooks.py  networkx.ipynb  pluggy.ipynb
server/: .dockerignore  .gitignore  docker-compose.yml  nginx.conf  setup_dev.sh
server/backend/: Dockerfile  init_dvc.sh  requirements.txt  set_perm.sh
server/ddoc-workspace/: Dockerfile  README.md  requirements.txt
server/docs/: RELEASE_v1.0.md
server/frontend/: Dockerfile  index.html  package-lock.json  package.json
server/sample_dataset/: sample_prod.csv  sample_train.csv  sample_with_missing.csv
src/base_scaffolding/: clear.sh  create_dd_project.py  run.sh
src/base_server/: Dockerfile_app_fiftyone  README.md  README_docker_user_permission.md  README_laravel_helloworld.md  README_laravel_login_register.md  README_laravel_trouble_shooting.md  README_nginx_and_php_mysql_phpmyadmin.md  __docker-compose.yml.bak1  __docker-compose.yml.clipboard  docker-compose.yml  docker_permission.sh  export.sh  init_config.sh  package-lock.json  run_artisan_migrate.sh  run_clear_cache.sh  run_docker_ps_short.sh  tmp.sh  up.sh  up_backgroud.sh  z.txt
src/base_server_laravel/: up.sh
src/dd/: 01_pypi_test.sh  README.md  config.json  install.sh  requirements.txt  setup.py  version.json
src/dd_candidate01/: setup.py
src/dd_clinic_server/: README.md  docker-compose.yml
src/laravel_server/: Dockerfile  README.md  composer.json  docker-compose.yml  migration.sh
src/neuralscope/: up.sh
(+554 files in other folders)
