[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc"
version = "2.1.0"
description = "ddoc: AI data and model management tools as data drift solutions"
license = {text = "Apache2.0"}
readme = "README.md"
requires-python = ">=3.8"
#release_date = "2025-10-20"
#ddoc_hub_url = "http://127.0.0.1:8000"
#reserved = ""

authors = [
  { name = "JPark", email = "feynmanc@naver.com" }
]

# Core dependencies — kept light intentionally so `pip install ddoc` works
# for the orchestrator + ingest workflow without pulling MLflow, torch, etc.
# Heavier deps live in optional-dependencies extras (see below).
#
# What `pip install ddoc` (no extras) gives you:
#   - init / add / snapshot — workspace + DVC integration
#   - ingest — keti_veritas envelope JSON consumer
#   - analyze drift / eda (path mode + --json) — orchestrator-friendly
#     subprocess interface; the actual analysis still requires a domain
#     plugin (e.g. ddoc-plugin-vision) installed separately
#   - plugin list / info, vis, snapshot management
#
# What it does NOT give you (deliberate):
#   - exp train / eval / best         → install with [exp]
#   - parquet writer in inbox/         → install with [ingest]
#   - vision / yolo / vis plugins      → install [vision] / [yolo] / [vis]
dependencies = [
  "fastapi",
  "uvicorn",
  "requests",
  "pandas",
  "numpy",
  "scikit-learn",
  "pyyaml",
  "fpdf",
  "weasyprint",
  "pluggy>=1.5.0",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "networkx",
  "dotenv",
]

[project.optional-dependencies]
# Round-2 (2026-05-07) — `mlflow` moved out of core and into [exp].
# `experiment/run_train.py` etc. import mlflow; the CLI's commands/__init__.py
# already wraps that import in try/except so the CLI itself works without it.
exp = [
  "mlflow>=2.0.0",
]

# Round-2 — pyarrow for the parquet writer in `core/ingest_service.py`.
# CSV remains the default; --parquet flag opt-in.
ingest = [
  "pyarrow>=14.0.0",
]

# Round-2 — alias for backend orchestrator deployments. Currently no
# additional deps beyond core; defined so deployment manifests can pin
# `pip install ddoc[orchestrator]==2.x.y` and survive future tightening.
orchestrator = []

# Test extras — used by `11_install_pytest.sh` and CI. Kept tiny so the
# core install path is uncontaminated.
test = [
  "pytest>=7.0",
]

vision = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "clip @ git+https://github.com/openai/CLIP.git",
  "pillow>=9.0.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "scikit-image>=0.19.0",
  "scipy>=1.7.0",
  "yellowbrick>=1.5",
]
yolo = [
  "ultralytics>=8.0.0; python_version >= '3.10'",
  "ultralytics>=7.0.0,<8.0.0; python_version < '3.10'",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "opencv-python>=4.6.0",
]
nlp = [
  # NLP dependencies will be added when needed
]
vis = [
  "streamlit>=1.28.0",
]
# NOTE: the `all` extras's plugin entries below use file:// paths bound to
# a developer's local checkout. They will NOT resolve on a fresh PyPI
# install. Leaving the spec here as documentation of the intended bundle;
# fix-up to a real Plugin index (or PEP 508 git+ URLs) is a separate round.
all = [
  # Subsumes other extras for end-to-end install
  "mlflow>=2.0.0",
  "pyarrow>=14.0.0",
  # Vision dependencies
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "clip @ git+https://github.com/openai/CLIP.git",
  "pillow>=9.0.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "scikit-image>=0.19.0",
  "scipy>=1.7.0",
  "yellowbrick>=1.5",
  # YOLO dependencies
  "ultralytics>=8.0.0; python_version >= '3.10'",
  "ultralytics>=7.0.0,<8.0.0; python_version < '3.10'",
  "opencv-python>=4.6.0",
  # Visualization dependencies
  "streamlit>=1.28.0",
  # Plugin packages — file:// paths only valid in the original developer
  # workspace. Replace with PyPI / git+https URLs before a public release.
  "ddoc-plugin-vision @ file:///Users/bhc/dev/drift_v1/ddoc/plugins/ddoc-plugin-vision",
  "ddoc-plugin-yolo @ file:///Users/bhc/dev/drift_v1/ddoc/plugins/ddoc-plugin-yolo",
  "ddoc-plugin-vis @ file:///Users/bhc/dev/drift_v1/ddoc/plugins/ddoc-plugin-vis",
]

[project.scripts]
ddoc = "ddoc.cli.main:app"

[tool.setuptools]
packages = {find = {where = ["."], include = ["ddoc*"]}}
include-package-data = true  # ✅ 이 줄을 여기에 두세요 (boolean 값)

[tool.setuptools.package-data]
ddoc = [
  "fonts/NanumGothicCoding-Bold.ttf",
  "fonts/NanumGothicCoding-Regular.ttf",
  "config/config.json"
]