[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddoc-plugin-text"
version = "1.0.0"
description = "Text analysis plugin for ddoc (CSV text analysis, drift detection)"
requires-python = ">=3.9"
dependencies = [
    "pluggy>=1.5.0",
    "torch>=2.0.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "nltk>=3.8",
]

[project.entry-points."ddoc"]
ddoc_text = "ddoc_plugin_text.text_impl:DOCTextPlugin"

[tool.setuptools]
packages = {find = {where = ["."], include = ["ddoc_plugin_text*"]}}
include-package-data = true
zip-safe = false

